<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sexyhair.demokotlinvar.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_main_var"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_main_var" />

            <Button
                android:id="@+id/btn_main_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_main_collect" />

            <Button
                android:id="@+id/btn_main_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_main_control" />

            <Button
                android:id="@+id/btn_main_fun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_main_fun" />
            <Button
                android:id="@+id/btn_main_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_main_class" />

            <Button
                android:id="@+id/btn_main_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_main_view" />



        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
