<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sexyhair.demokotlinvar.DemoCollectionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btn_set_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function" />
        <Button
            android:id="@+id/btn_set_Each"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function2" />
        <Button
            android:id="@+id/btn_set_iterator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function3" />

        <Button
            android:id="@+id/btn_list_sortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function4" />

        <Button
            android:id="@+id/btn_list_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function5" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function6" />
        <Button
            android:id="@+id/btn_mapAddE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_function6" />

        <TextView
            android:id="@+id/textShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>


</android.support.constraint.ConstraintLayout>
