<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sexyhair.demokotlinvar.DemoControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_if"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_control1" />

        <Button
            android:id="@+id/btn_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_control2" />

        <Button
            android:id="@+id/btn_while"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_control3" />


        <TextView
            android:id="@+id/textShowControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
