<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sexyhair.demokotlinvar.View.DemoViewActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_view_clickNoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_clickNoName" />
            <Button
                android:id="@+id/btn_view_clickClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_clickClass" />
            <Button
                android:id="@+id/btn_view_clicInterface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_clicInterface" />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/view_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/view_checkBoxShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/view_textTwinkle"
                android:text="@string/view_textTwinkle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
